--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 CONNECTION_STRING=mongodb+srv://magdalenajakonska:YrkOajaGk5lI064o@cluster0.odekchw.mongodb.net/adsdb?retryWrites=true&w=majority
+
+mongodb+srv://magdalenajakonska:NCTdCrmwYEJsnx5V@cluster0.j4bduaz.mongodb.net/gigapp?retryWrites=true&w=majority
